sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var longueur:Int = getNombreValeurs()
  var posGraincheux:Int = 1
  
  while (posGraincheux > 0 && posGraincheux < longueur) {
    if (plusPetit(posGraincheux, posGraincheux - 1)) {
      echange(posGraincheux, posGraincheux - 1)
      
      if(posGraincheux > 0 )
      	posGraincheux -= 1
    } else {
      posGraincheux + = 1
    }
  }
}